@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.mobicents.servlet.sip</groupId>
 		<artifactId>restcomm</artifactId>
-		<version>1.0.0.BETA2-SNAPSHOT</version>
+		<version>1.0.0.CR2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>restcomm.testsuite</artifactId>
@@ -14,6 +15,13 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+		<tomcat.version>6.0.35</tomcat.version>
+		<arquillian.version>1.0.3.Final</arquillian.version>
+		<mss.arquillian.version>1.0.0-Final-SNAPSHOT</mss.arquillian.version>
+		<mgcpunit.version>1.0.0-ALPHA3-SNAPSHOT</mgcpunit.version>
+		<shrinkwrap.resolver.version>2.0.0-alpha-4
+		</shrinkwrap.resolver.version>
 	</properties>
 
 	<dependencies>
@@ -28,7 +36,7 @@
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
-			<version>1.2.14</version>
+			<version>1.2.17</version>
 		</dependency>
 
 		<dependency>
@@ -76,14 +84,21 @@
 		<dependency>
 			<groupId>org.jboss.arquillian.junit</groupId>
 			<artifactId>arquillian-junit-container</artifactId>
-			<version>1.0.1.Final</version>
+			<version>${arquillian.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.jboss.shrinkwrap.resolver</groupId>
 			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
-			<version>1.1.0-alpha-3</version>
+			<version>${shrinkwrap.resolver.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jboss.shrinkwrap.resolver</groupId>
+			<artifactId>shrinkwrap-resolver-impl-maven-archive</artifactId>
+			<version>${shrinkwrap.resolver.version}</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -95,22 +110,36 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.cafesip.sipunit</groupId>
+			<artifactId>sipunit</artifactId>
+			<version>2.0.0</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.mobicents.commtesting</groupId>
+			<artifactId>mgcpUnit</artifactId>
+			<version>${mgcpunit.version}</version>
+			<scope>test</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>org.mobicents.arquillian.container</groupId>
 			<artifactId>mss-tomcat-embedded-6</artifactId>
-			<version>1.0.0-ALPHA1</version>
+			<version>${mss.arquillian.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>coyote</artifactId>
-			<version>6.0.33</version>
+			<version>${tomcat.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>jasper</artifactId>
-			<version>6.0.33</version>
+			<version>${tomcat.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
@@ -118,34 +147,30 @@
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.containers</groupId>
 			<artifactId>sip-servlets-catalina</artifactId>
-			<version>1.7.0.FINAL</version>
+			<version>${sipservletapi.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mobicents.servlet.sip.containers</groupId>
 			<artifactId>sip-servlets-tomcat-jboss4</artifactId>
-			<version>1.7.0.FINAL</version>
+			<version>${sipservletapi.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
 			<artifactId>sip-servlets-application-router</artifactId>
-			<version>1.7.0.FINAL</version>
+			<version>${sipservletapi.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
-			<artifactId>twilio-java-sdk</artifactId>
-			<version>3.3.10-SNAPSHOT</version>
+			<artifactId>restcomm-java-wrapper</artifactId>
+			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
-
-		<!-- Axis Dependencies -->
-		<!-- <dependency> <groupId>axis</groupId> <artifactId>axis</artifactId> 
-			<version>1.3</version> <scope>test</scope> </dependency> -->
 
 		<dependency>
 			<groupId>org.mobicents.servlet.sip</groupId>
@@ -169,23 +194,36 @@
 
 	<modules>
 		<module>BasicTest</module>
-		<!-- <module>ExtrasTest</module> -->
-<!--     <module>PresenceTest</module> -->
-  </modules>
+		<!-- The ExtrasTests tests need account setup for SMS and FAX -->
+		<!--<module>ExtrasTest</module> -->
+		<module>PresenceTest</module>
+		<module>MediaTests</module>
+		<module>CompatibilityTests</module>
+	</modules>
 
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.12.1</version>
+				<version>2.12.4</version>
 				<configuration>
-					<excludes>
-						<exclude>**/AccountsEndpointTest.java</exclude>
-						<exclude>**/IncomingPhoneNumbersEndpointTest.java</exclude>
-						<exclude>**/ClientsEndpointTest.java</exclude>
-						<exclude>**/PresenceTest.java</exclude>
-					</excludes>
+					<argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=1024m</argLine>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>2.4.1</version>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>${basedir}</directory>
+							<includes>
+								<include>logs/</include>
+							</includes>
+							<followSymlinks>false</followSymlinks>
+						</fileset>
+					</filesets>
 				</configuration>
 			</plugin>
 		</plugins>
